# Technical-Project---Robotic-Warehouse

./: README.md
final_project/: CMakeLists.txt  package.xml
final_project/config/: iiwa_poses.yaml
final_project/launch/: pick_and_place.launch.py  warehouse.launch.py
final_project/models/marker/: model.config  model.sdf
final_project/src/: fra2mo_mission.py  iiwa_pick_and_place_node.cpp
final_project/worlds/: warehouse.world
ros2_fra2mo/config/: explore.yaml  navigation.yaml  slam.yaml
ros2_fra2mo/maps/: map.pgm  map.yaml
ros2_fra2mo/rviz_conf/: explore.rviz  slam_view.rviz
ros2_fra2mo/urdf/: camera_gazebo.xacro  fra2mo.urdf.xacro  fra2mo_base_macro.xacro  lidar_gazebo_macro.xacro
ros2_iiwa/iiwa_description/config/: base_frame.yaml  iiwa.config.xacro  iiwa_controllers.yaml  initial_positions.yaml
ros2_iiwa/iiwa_description/gazebo/: iiwa.gazebo.xacro
ros2_iiwa/iiwa_description/ros2_control/: iiwa.r2c_hardware.xacro
ros2_iiwa/iiwa_description/urdf/: iiwa.urdf.xacro  iiwa_camera.xacro
